--- a/client/src/assets/scss/stylesheets/projectMetrics.scss
+++ b/client/src/assets/scss/stylesheets/projectMetrics.scss
@@ -2,19 +2,75 @@
 
 .woods-metrics-container {
   display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
+  justify-content: center;
+  flex-flow: row wrap;
   padding: 1rem;
   margin-bottom: 2rem;
   min-width: 90%;
 }
 
 .show-metrics-container {
+  display: flex;
+  flex-flow: column wrap;
   margin-bottom: 2rem;
   padding: 2rem;
   border-radius: 0.5rem;;
-  min-width: 10%;
+  width: 40%;
+  min-width: 300px;
   color: $dark-gray;
+  font-weight: bold;
+}
+
+.added-wood-tile-container {
+  display: flex;
+  justify-content: flex-start;
+  flex-flow: row wrap;
+  color: $medium-beige;
+  border-radius: 0.5rem;
+  width: 60%;
+  min-width: 240px;
+}
+
+.added-wood-tile {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-between;
+  background-color: $dark-gray;
+  color: $medium-beige;
+  margin: 0.25rem;
+  padding: 0.5rem 1rem;
+  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  border-radius: 0.5rem;
+  width: 45%;
+  min-width: 240px;
+}
+
+#wood-name {
+  font-weight: bolder;
+}
+
+#wood-tile-p {
+  font-weight: bold;
+}
+
+#delete-persisted-wood-button { 
+  color: $medium-beige;
+  border-radius: 0.5rem;
+  padding: 0.18rem;
+  margin-left: 1.5rem;
+}
+
+#delete-persisted-wood-button:link {
+  color: $medium-beige;
+}
+#delete-persisted-wood-button:visited {
+  color: $medium-beige;
+}
+#delete-persisted-wood-button:hover {
+  cursor: pointer;
+  background-color: $medium-beige;
+  color: red;
 }
 
 .add-woods-container {
@@ -23,6 +79,7 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+  margin-bottom: 2rem;
   padding: 2rem;
   min-width:70%;
   background-color: $dark-gray;
@@ -132,7 +189,6 @@
 }
 
 .remove-wood-x { 
-  border: 2px solid $medium-beige;
   color: $medium-beige;
   border-radius: 0.5rem;
   padding: 0.18rem;
@@ -158,53 +214,3 @@
   margin-bottom: 1rem;
 }
 
-.added-wood-tile-container {
-  display: flex;
-  justify-content: center;
-  flex-flow: row wrap;
-  gap: 0.75rem;
-  margin-bottom: 2rem; 
-}
-
-.added-wood-tile {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0.5rem;
-  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
-  background-color: $dark-gray;
-  color: $medium-beige;
-  padding: 1rem;
-  width: 200px;
-  height: 160px
-}
-
-#wood-name {
-  font-weight: bolder;
-  width: 90%
-}
-
-#wood-tile-p {
-  font-weight: bold;
-}
-
-#delete-persisted-wood-button { 
-  border: 2px solid $medium-beige;
-  color: $medium-beige;
-  border-radius: 0.5rem;
-  padding: 0.18rem;
-  margin-left: 1.5rem;
-}
-
-#delete-persisted-wood-button:link {
-  color: $medium-beige;
-}
-#delete-persisted-wood-button:visited {
-  color: $medium-beige;
-}
-#delete-persisted-wood-button:hover {
-  cursor: pointer;
-  background-color: $medium-beige;
-  color: red;
-}
