added new transparent gray background, darker

--- a/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
+++ b/client/src/assets/scss/stylesheets/hardwoodIndexPage.scss
@@ -20,7 +20,7 @@ h4 {
   justify-content: center;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
-  background-color: $dark-gray;
+  background-color: $dark-gray-transparent-9;
   color: $medium-beige;
   padding: 1rem;
   width: 300px;
