--- a/client/src/assets/scss/stylesheets/signInOutForms.scss
+++ b/client/src/assets/scss/stylesheets/signInOutForms.scss
@@ -11,7 +11,7 @@
   padding: 2rem;
   max-width: 35%;
   color: $medium-beige;
-  background-color: $dark-gray;
+  background-color: $dark-gray-transparent-9;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
 }
@@ -27,6 +27,8 @@
 #auth-button {
   border-radius: 0.5rem;
   border: 1.5px solid $medium-beige;
+  background-color: $dark-gray;
+  color: $medium-beige;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
 }
 
