--- a/client/src/assets/scss/stylesheets/colors.scss
+++ b/client/src/assets/scss/stylesheets/colors.scss
@@ -1,7 +1,8 @@
 $medium-beige: rgb(255, 190, 141);
 $light-beige: rgb(255, 217, 187);
 $medium-gray: rgb(135, 135, 135);
-$dark-gray: rgb(35, 34, 34);
+$dark-gray: rgba(35, 34, 34, 1);
+$dark-gray-transparent-9: rgba(35, 34, 34, 0.95);
 $dark-gray-transparent: rgba(29, 29, 29, 0.7);
 $red-brown: rgb(40, 21, 0);
 $beige-transparent:rgba(255, 190, 141, 0.6);
