--- a/client/src/assets/scss/stylesheets/devInfoPage.scss
+++ b/client/src/assets/scss/stylesheets/devInfoPage.scss
@@ -20,7 +20,7 @@
 .dev-details {
   display: flex;
   flex-direction: column;
-  background-color: $dark-gray;
+  background-color: $dark-gray-transparent-9;
   color: $medium-beige;
   padding: 2rem;
   border-radius: 0.5rem;
