--- a/client/src/assets/scss/stylesheets/homePages.scss
+++ b/client/src/assets/scss/stylesheets/homePages.scss
@@ -15,7 +15,7 @@
 
 .unauthenticated-home-page {
   margin-top: 2rem;
-  background-color: $dark-gray;
+  background-color: $dark-gray-transparent-9;
   box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 50px;
 }
 
