--- a/client/src/assets/scss/stylesheets/projectForm.scss
+++ b/client/src/assets/scss/stylesheets/projectForm.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   justify-content: center;
   border-radius: 0.5rem;
-  background-color: $dark-gray;
+  background-color: $dark-gray-transparent-9;
   color: $medium-beige;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   padding: 1.5rem;
@@ -37,6 +37,8 @@
 #project-form-submit {
   border-radius: 0.5rem;
   border: 2px solid $medium-beige;
+  background-color: $dark-gray;
+  color: $medium-beige;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
 }
 
