created admin portal, updated tabel and model, styling

--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -12,6 +12,7 @@
 @import "../scss/stylesheets/hardwoodIndexPage.scss";
 @import "../scss/stylesheets/popups.scss";
 @import "../scss/stylesheets/signInOutForms.scss";
+@import "../scss/stylesheets/adminPortal.scss";
 
 *,
 *::before,
