--- a/client/src/assets/scss/stylesheets/adminPortal.scss
+++ b/client/src/assets/scss/stylesheets/adminPortal.scss
@@ -1,10 +1,12 @@
 .admin-page-container {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   color: $medium-beige;
   width:max-content;
-  max-width: 95%;
-  max-height: 81%;
+  width: 95%;
+  height: 80%;
   margin: 0 auto;
   font-weight: bold;
   text-align: center;
@@ -16,18 +18,107 @@
   overflow-y: scroll;
 }
 
+.admin-option-buttons {
+  display: flex;
+}
+
+.add-a-new-hardwood-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid $medium-beige;
+  width: fit-content;
+  margin: 2rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+.add-hardwood-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.add-hardwood-labels {
+  display: flex;
+  gap: 1rem;
+}
 .wood-price-list {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
+}
+
+.wood-price-tile-container {
+  display: flex;
+  flex-direction: column;
 }
 
 .wood-price-item {
   display: flex;
-  gap: 1rem
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 0.5rem;
+  gap: 0.75rem;
+  width: 350px;
+  min-height: 50px;
+}
+
+.edit-form-container {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid $medium-beige;
+  border-radius: 0.5rem;
+  padding: 1rem;
+    
 }
 
 .edited-hardwood-form {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.edit-button {
+  background-color: $medium-beige;
+  color: $dark-gray;
+  border-radius: 0.5rem;
+  padding: 0 0.2rem;
+}
+
+.edit-button:link {
+  color: $red-brown;
+}
+.edit-button:visited {
+  color: $red-brown;
+}
+.edit-button:hover {
+  cursor: pointer;
+  color: $beige-transparent;
+  background-color: $dark-gray;
+  border: 1.5px solid $medium-beige;
+}
+
+.edit-wood-name,
+.edit-wood-price {
+  color: $medium-beige;
+}
+
+#edit-wood-name,
+#edit-wood-price {
+  background-color: $dark-gray;
+  border: 2px solid $medium-beige;
+  border-radius: 0.5rem;
+  color: $medium-beige;
+  width: fit-content;
+  text-align: center;
+}
+
+.edit-hardwood-form-submit {
+  width: 90px;
+  height: 45px;
 }
