--- a/client/src/assets/scss/stylesheets/adminPortal.scss
+++ b/client/src/assets/scss/stylesheets/adminPortal.scss
@@ -58,7 +58,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
   border-radius: 0.5rem;
   gap: 0.75rem;
   width: 350px;
@@ -100,7 +100,7 @@
   cursor: pointer;
   color: $beige-transparent;
   background-color: $dark-gray;
-  border: 1.5px solid $medium-beige;
+  border: 2px solid $medium-beige;
 }
 
 .edit-wood-name,
@@ -121,4 +121,28 @@
 .edit-hardwood-form-submit {
   width: 90px;
   height: 45px;
+}
+
+.tiny-image {
+  margin-top: 0.1rem;
+  width: 21px;
+  height: 21px;
+  border-radius: 0.5rem;
+}
+
+.admin-remove-wood-x {
+  color: $medium-beige;
+  padding-right: 0.2rem;
+}
+
+.admin-remove-wood-x:link {
+  color: $medium-beige;
+}
+.admin-remove-wood-x:visited {
+  color: $medium-beige;
+}
+.admin-remove-wood-x:hover {
+  cursor: pointer;
+  background-color: $medium-beige;
+  border-radius: 0.5rem;
 }
