--- a/client/src/assets/scss/stylesheets/adminPortal.scss
+++ b/client/src/assets/scss/stylesheets/adminPortal.scss
@@ -170,8 +170,10 @@
 
 
 #hardwoodChart {
+  border: 3px solid $medium-beige;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  padding: 0.5rem;
   min-width: 200px;
   max-width: 600px;
 }
