--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -13,6 +13,7 @@
 @import "../scss/stylesheets/popups.scss";
 @import "../scss/stylesheets/signInOutForms.scss";
 @import "../scss/stylesheets/adminPortal.scss";
+@import "../scss/stylesheets/userSettings.scss";
 
 *,
 *::before,
