edit / submit functionality to show/hide edit settings form

--- a/client/src/assets/scss/stylesheets/forms.scss
+++ b/client/src/assets/scss/stylesheets/forms.scss
@@ -1,6 +1,5 @@
-.projects-form-container,
-.user-settings-container {
-  align-self: center;
+.projects-form-container {
+  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
