--- a/client/src/assets/scss/stylesheets/userSettings.scss
+++ b/client/src/assets/scss/stylesheets/userSettings.scss
@@ -8,6 +8,8 @@
   color: $medium-beige;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   padding: 1.5rem;
+  width: fit-content;
   height: fit-content;
+  margin: 2rem auto;
   gap: 2rem
 }
