--- a/client/src/assets/scss/stylesheets/forms.scss
+++ b/client/src/assets/scss/stylesheets/forms.scss
@@ -35,7 +35,8 @@
 .markup,
 .laborRate,
 .woodWaste,
-.showUserSettingsFormButton {
+.showUserSettingsFormButton,
+.hours {
   color: $medium-beige;
   font-size: 1.1rem;
 }
@@ -53,7 +54,8 @@
 #laborRate,
 #woodWaste,
 #user-settings-submit,
-#showUserSettingsFormButton {
+#showUserSettingsFormButton,
+#hours {
   border-radius: 0.5rem;
   border: 2px solid $medium-beige;
   background-color: $dark-gray;
