--- a/client/src/assets/scss/stylesheets/weather.scss
+++ b/client/src/assets/scss/stylesheets/weather.scss
@@ -1,7 +1,7 @@
 
 .weather-block {
   display: flex;
-  justify-content:space-between;
+  justify-content:center;
   align-items: flex-end;
   flex-wrap: wrap;
   max-width: 75%;
