--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -32,13 +32,12 @@ body {
 }
 
 .app-container {
-  color: $red-brown;
   border-radius: 0.6rem;
   max-width: 98%;
   min-width: 300px;
   margin: 0 auto;
   margin-bottom: 3rem;
-  background-image: url('https://i.imgur.com/bwDuFOw.jpg');
+  background-image: url('../../../public/WoodBackground.jpeg');
   background-size: cover;
   min-height: 820px;
   box-shadow: rgba(67, 67, 67, 0.5) 0px 0px 30px;
