--- a/client/src/assets/scss/stylesheets/forms.scss
+++ b/client/src/assets/scss/stylesheets/forms.scss
@@ -120,7 +120,8 @@
   background-color: rgba(255, 0, 0, 0.07);
   text-align: center;
 }
-.errors ul {
+.errors ul,
+.errors p {
   display: inline-block;
   margin: 0;
   padding: 1rem;
