--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -79,6 +79,7 @@
   flex-flow: column wrap;
   gap: 1rem;
   background-color: $dark-gray-transparent-9;
+  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
   color: $medium-beige;
   padding: 1rem 3rem;
   border-radius: 0.5rem;
@@ -98,6 +99,38 @@
   padding: 2rem;
   border-radius: 0.5rem;
   color: $dark-gray;
+}
+
+.image-uploader-container {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 2rem;
+  padding: 2rem;
+  min-width:70%;
+  background-color: $dark-gray-transparent-9;
+  border-radius: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  color: $medium-beige;
+}
+
+.dropzone-drop-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid $medium-beige;
+  height: 100px;
+  width: 300px;
+  margin: 1rem;
+  padding: 4rem;
+  border-radius: 0.5rem;
+}
+
+.dropzone-image {
+  max-height: 200px;
+  border-radius: 0.5rem;
 }
 
 .bottom-links {
