--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -121,15 +121,32 @@
   justify-content: center;
   align-items: center;
   border: 2px solid $medium-beige;
-  height: 100px;
+  height: auto;
   width: 300px;
   margin: 1rem;
-  padding: 4rem;
+  padding: 1rem;
   border-radius: 0.5rem;
+}
+
+.dropzone-images-container {
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  gap: 1rem
+}
+
+.dropzone-image-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .dropzone-image {
   max-height: 200px;
+  max-width: 200px;
   border-radius: 0.5rem;
 }
 
