refactored css to transform images on hover without affecting layout

--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -185,8 +185,7 @@
 }
 
 .dropzone-image:hover {
-  height: auto;
-  width: 400px;
+  transform: scale(2)
 }
 
 // "BACK TO PROJECTS" and "DELETE THIS PROJECT"
