re-styled sign out button

--- a/client/src/assets/scss/stylesheets/forms.scss
+++ b/client/src/assets/scss/stylesheets/forms.scss
@@ -140,3 +140,9 @@
 .sign-out {
   max-width: 100px;
 }
+
+.logged-in-links-top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
