--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -185,7 +185,10 @@
 }
 
 .dropzone-image:hover {
-  transform: scale(2)
+  box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
+  border: 2px solid $medium-beige;
+  transform: scale(2);
+
 }
 
 // "BACK TO PROJECTS" and "DELETE THIS PROJECT"
