--- a/client/src/assets/scss/stylesheets/weather.scss
+++ b/client/src/assets/scss/stylesheets/weather.scss
@@ -2,11 +2,10 @@
 .weather-block {
   display: flex;
   justify-content:center;
-  align-items: flex-end;
+  align-items: center;
   flex-wrap: wrap;
   max-width: 75%;
   margin: 0 auto;
-  margin-top: 2rem;
   color: rgb(120, 120, 120);  
 }
 
