--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -109,12 +109,11 @@
 
 .image-uploader-container {
   display: flex;
-  flex-flow: column wrap;
-  justify-content: space-around;
+  flex-flow: column;
+  justify-content: center;
   align-items: center;
   margin-bottom: 2rem;
   padding: 2rem;
-  min-width:90%;
   background-color: $dark-gray-transparent-9;
   border-radius: 0.5rem;
   box-shadow: rgba(0, 0, 0, 0.8) 5px 10px 30px;
@@ -123,12 +122,11 @@
 
 .dropzone-drop-container {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row;
   justify-content: center;
   align-items: center;
   border: 2px solid $medium-beige;
   height: auto;
-  min-width: 360px;
   margin: 1rem;
   margin-bottom: 2rem;
   padding: 0.5rem;
