--- a/client/src/assets/scss/stylesheets/projects.scss
+++ b/client/src/assets/scss/stylesheets/projects.scss
@@ -195,10 +195,11 @@
 
 // "BACK TO PROJECTS", "DELETE THIS PROJECT", "PROJECT SETTINGS"
 
-.bottom-links {
+.project-top-links {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  margin: 0 auto
+  margin: 0 auto;
+  margin-bottom: 2rem;
 }
