--- a/client/src/assets/scss/stylesheets/forms.scss
+++ b/client/src/assets/scss/stylesheets/forms.scss
@@ -60,7 +60,11 @@
 .message,
 .subject,
 .auth-email,
-.auth-password {
+.auth-password,
+.firstName,
+.lastName,
+.email,
+.cellPhone {
   color: $medium-beige;
   font-size: 1.1rem;
 }
@@ -82,7 +86,14 @@
 #auth-email,
 #auth-password,
 #auth-button,
-#all-buttons {
+#all-buttons,
+#firstName,
+#lastName,
+#email,
+#cellPhone,
+#prospect,
+#negotiating,
+#commissioned {
   border-radius: 0.5rem;
   border: 2px solid $medium-beige;
   background-color: $dark-gray;
@@ -143,6 +154,7 @@
   border-radius: 0.5rem;
   background-color: rgba(255, 0, 0, 0.07);
   text-align: center;
+  padding: 1rem
 }
 .errors ul,
 .errors p {
