--- a/client/src/assets/scss/main.scss
+++ b/client/src/assets/scss/main.scss
@@ -29,7 +29,7 @@
 
 body {
   background-color: black;
-  background-image: url('../../../public/WoodBackground.jpeg');
+  // background-image: url('../../../public/WoodBackground.jpeg');
   background-size: cover;
   margin: 146px auto;
   font-family: 'Ubuntu', sans-serif;
